# anki-builder

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
src/: audio_generator.py  constants.py  data_loader.py  deck_builder.py
tests/: test_audio_generator.py  test_data_loader.py  test_deck_builder.py
