[project]
name = "anki-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "genanki>=0.13.1",
    "google-cloud-texttospeech>=2.33.0",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "openai>=2.8.1",
    "pydantic>=2.12.5",
]

[tool.uv]
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
package = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

# Editable installs: add ./src to sys.path so `import constants` works in dev
[tool.hatch.build]
dev-mode-dirs = ["src"]

# Wheels/sdist: ship src/constants.py at top-level (no "src." prefix)
[tool.hatch.build.targets.wheel]
only-include = ["src/constants.py"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
only-include = ["src/constants.py"]
sources = ["src"]
